feat: add supplier in inventory
