# green-store/app/lib/api/models/inventory-request.ts
@@ -17,5 +17,6 @@
 export interface InventoryRequest {
     'productId'?: number;
     'quantity'?: number;
+    'supplierId'?: number;
 }
 
